bk_ida/gobmkida/c1/is_legal
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_legal/src/engine/board.c:1530:60: error: use of undeclared identifier 'byte_9AA89F'
&& ( board_ko_pos != pos || 3 - color != ( unsigned __int8)byte_9AA89F[pos] && 3 - color != board[pos + 1]) ) 
                                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_legal/src/obj/1/board.o] Error 1
